--- a/HelloWorld/Views/Home/Index.cshtml
+++ b/HelloWorld/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <style>
         .btn a {
@@ -22,6 +23,13 @@
 <body>
     <div class="text-center">
         <h2>The party is tonight.</h2>
+
+        @Html.Action("IncrementCount")
+
+        @Html.ActionLink("Login", "Login")
+        @Html.ActionLink("Logoff", "Logoff")
+        @Html.Action("DisplayLoginName")
+
         <h3>And you're invited</h3>
 
         <div class="btn btn-success">
@@ -34,6 +42,22 @@
 
         <div class="btn btn-success">
             @Html.ActionLink("View Products", "Products")
+        </div>
+
+        <div class="btn btn-success">
+            @Html.ActionLink("Set Cookie", "SetCookie")
+        </div>
+
+        <div class="btn btn-success">
+            @Html.ActionLink("Get Cookie", "GetCookie")
+        </div>
+
+        <div class="btn btn-success">
+            @Html.ActionLink("Log Out", "LogOut", "Account")
+        </div>
+
+        <div class="btn btn-success">
+            @Html.ActionLink("Secure Notes", "Notes")
         </div>
     </div>
 </body>
