--- a/HelloWorld/Views/Home/RsvpForm.cshtml
+++ b/HelloWorld/Views/Home/RsvpForm.cshtml
@@ -1,5 +1,7 @@
 ﻿@model HelloWorld.Models.GuestResponse
-
+@{
+    Layout = null;
+}
 
 <head>
     <meta name="viewport" content="width=device-width" />
