--- a/HelloWorld/Views/_BasicLayout.cshtml
+++ b/HelloWorld/Views/_BasicLayout.cshtml
@@ -7,8 +7,12 @@
 </head>
 <body>
     <h1>Product Information</h1>
+    @if (!string.IsNullOrEmpty(User.Identity.Name))
+    {
+    <p>Logged in as @User.Identity.Name</p>
+    }
     <div style="padding:20px; border: solid medium black; font-size: 20pt">
-        @RenderBody()
+     @RenderBody()
     </div>
 </body>
 </html>
