--- a/CEby_Website/Views/Home/Index.cshtml
+++ b/CEby_Website/Views/Home/Index.cshtml
@@ -16,11 +16,11 @@
         </p>        
     </div>
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Enroll a Class", "EnrollAClass")</h2>
+        <h2>@Html.ActionLink("Your Enrolled Classes", "GetEnrolledClasses")</h2>
         <p>See the classes you are enrolled in currently.</p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
+        <h2>@Html.ActionLink("Enroll a Class", "EnrollAClass")</h2>
         <p>Take a new class.</p>
     </div>
 </div>
