Working on EnrollAClass

--- a/CEby_Website/Views/Home/Index.cshtml
+++ b/CEby_Website/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         <p>See the classes you are enrolled in currently.</p>
     </div>
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Enroll a Class", "EnrollAClass")</h2>
+        <h2>@Html.ActionLink("Enroll in a Class", "EnrollInClass")</h2>
         <p>Take a new class.</p>
     </div>
 </div>
