--- a/CEby_Website/Views/Home/Index.cshtml
+++ b/CEby_Website/Views/Home/Index.cshtml
@@ -3,9 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>230 WebSite Project</h1>
+    <p class="lead">Website utilizing .Net Framework</p>
 </div>
 
 <div class="row">
@@ -16,7 +15,7 @@
         </p>        
     </div>
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Your Enrolled Classes", "GetEnrolledClasses")</h2>
+        <h2>@Html.ActionLink("Your Enrolled Classes", "StudentClasses")</h2>
         <p>See the classes you are enrolled in currently.</p>
     </div>
     <div class="col-md-4">
