--- a/CEby_Website/Views/Home/EnrollInClass.cshtml
+++ b/CEby_Website/Views/Home/EnrollInClass.cshtml
@@ -1,48 +1,14 @@
-﻿@model CEby_Website.Models.EnrollClassModel
+﻿@model CEby_Website.EnrollClassModel
 
 @{
-    Layout = null;
+    ViewBag.Title = "EnrollInClass";
 }
 
-<!DOCTYPE html>
+<h2>Enroll In Class</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>EnrollInClass</title>
-</head>
-<body>
-      
-        <div class="form-horizontal">
-            <h4>EnrollClassModel</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.ClassId, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ClassId, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ClassId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
-</body>
-</html>
+@using (Html.BeginForm())
+{
+    @Html.DropDownListFor(t => t.ClassId, new SelectList(Model.ClassList, "ClassId", "ClassName", Model.ClassList.First().ClassId))
+
+    <input type="submit" value="Add Class" />
+}
